syntax = "proto3";

package com.makarytskyi.internalapi.reqreply;

import "com/makarytskyi/internalapi/error/error.proto";

option java_multiple_files = true;

message DeleteOrderProtoRequest {
  string id = 1;
}

message DeleteOrderProtoResponse {
  oneof response {
    Success success = 1;
    internalapi.error.Error error = 2;
  }
}

message Success {

}
